fix: Removed additional gradient that was causing overlap in mobile view

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,6 @@ p {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background: linear-gradient(to bottom, hsla(252, 100%, 67%, 0.5), hsla(241, 81%, 54%, 1)) ;
     border-bottom-left-radius: 8%; 
     border-bottom-right-radius: 8%; 
     color: var(--result-text);
